Make sure mapillary-js UI is render correctly on mobile

--- a/styles/DirectionsUI.css
+++ b/styles/DirectionsUI.css
@@ -1,3 +1,10 @@
+.domRenderer {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 100;
+}
+
 .Directions {
     display: block;
     position: absolute;
@@ -15,6 +22,7 @@
     width: 100%;
     height: 100px;
     bottom: 0;
+    overflow: visible;
 }
 
 .DirectionsArrowStep,
